changed fb icon

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="rectangle-10"></div>
     <div class="join-class-today">Join Class Today</div>
     <div class="learn-more1">Learn More &gt;</div>
-    <img class="_104498-facebook-icon-1" src="104498_facebook_icon.png"><img class="icons-8-twitter-32-1" src="icons8-twitter-32.png"><img class="instagram-1384031-1" src="instagram_1384031.png"><img class="icons-8-youtube-64-1" src="icons8-youtube-64.png"><img class="bigstock-beautiful-young-red-head-woman-226944661-removebg-1" src="yoga girl.png">
+    <img class="_104498-facebook-icon-1" src="104498-facebook-icon-2@2x.png"><img class="icons-8-twitter-32-1" src="icons8-twitter-32.png"><img class="instagram-1384031-1" src="instagram_1384031.png"><img class="icons-8-youtube-64-1" src="icons8-youtube-64.png"><img class="bigstock-beautiful-young-red-head-woman-226944661-removebg-1" src="yoga girl.png">
     <div class="about-us">About Us</div>
     <div class="home">Home</div>
     <div class="millie-yoga">MillieYoga</div>
