--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <i class="fa fa-envelope" style="font-size:48px;color:rgb(255, 81, 0)"></i>
                 <h2 class="titleText2"><span>S</span>ubscribe To Our Newsletter</h2>
                 <p class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum nihil neque fugiat animi ex, et in ipsam laboriosam. 
-                  Tempore assumenda nisi eos delectus? At amet, necessitatibus repudiandae modi autem quis.Eos enim atque
+                  Tempore assumenda nisi eos delectus? At amet, necessi modi autem quis.Eos enim atque
                    impedit esse iure quo omnis voluptatibus dignissimos reiciendis distinctio?</p>
           
           
@@ -302,7 +302,7 @@
           </div>
           <div class="tnt3">
             <h2><b>MillieYoga</b></h2><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quasi. Suscipit possimus accusantium voluptas unde ratione, molestiae mollitia quasi nihil praesentium recusandae natus placeat debitis eum perspiciatis labore corporis illo!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quasi. Suscipit possimus accusantium unde ratione, molestiae mollitia quasi nihil praesentium recusandae natus placeat debitis eum perspiciatis labore corporis illo!</p>
             <div class="copy"><p><a href="#" class="fa fa-facebook"></a></p>
             <p id="p1"><a href="#" class="fa fa-twitter"></a></p>
             <p id="p1"><a href="#" class="fa fa-instagram"></a></p>
